Fix: Overflowing content on the about page.

--- a/src/app/(white)/(about)/about/page.module.scss
+++ b/src/app/(white)/(about)/about/page.module.scss
@@ -1,5 +1,11 @@
 @use "@styles/_theme.module.scss" as Theme;
 
+.about {
+  h1 {
+    margin-top: 200px;
+  }
+}
+
 .attention-getter-image {
   flex-direction: column;
   img {
