--- a/src/styles/showcase.module.scss
+++ b/src/styles/showcase.module.scss
@@ -4,7 +4,9 @@ $grid-margin: 20px;
 
 div.showcase {
   display: flex;
-  flex-wrap: wrap;
+  // If this component is ever re-used this will need to be changed to wrap and
+  // the about page might need to be addressed.
+  flex-wrap: wrap-reverse; 
   gap: $grid-margin;
   justify-content: center;
   align-items: center;
@@ -27,12 +29,11 @@ div.showcase {
       /* transition: all 0.2s; */
       flex: 1 0 calc(100% - $grid-margin);
       display: flex;
-      justify-content:center;
+      justify-content: center;
       img {
         //        transition: all 0.2s;
         //        box-shadow: 0px 5px 20px 5px Theme.$primary;
         object-fit: cover;
-        width: 50%;
         height: auto;
         //        &:hover {
         //          box-shadow: 0px 10px 20px 5px Theme.$primary;
@@ -92,6 +93,7 @@ div.showcase {
       border-radius: Theme.$buttonRadius;
       outline: 5px solid Theme.$primary;
       outline-offset: -4px;
+      object-fit: cover;
     }
   }
   button {
